--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta property="og:url" content="https://brick-scanner.com/">
     <meta property="og:title" content="Brick Scanner - Scan Your LEGO Pieces and Discover Endless Builds">
     <meta property="og:description" content="Photograph your LEGO pieces and instantly discover all the sets you can build with our intelligent AI recognition.">
-    <meta property="og:image" content="https://brick-scanner.com/img/og-image-en.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="en_US">
@@ -27,7 +26,6 @@
     <meta name="twitter:url" content="https://brick-scanner.com/">
     <meta name="twitter:title" content="Brick Scanner - Scan Your LEGO Pieces and Discover Endless Builds">
     <meta name="twitter:description" content="Photograph your LEGO pieces and instantly discover all the sets you can build with our intelligent AI recognition.">
-    <meta name="twitter:image" content="https://brick-scanner.com/img/twitter-card-en.jpg">
     <meta name="twitter:creator" content="@BrickScanner">
     <meta name="twitter:site" content="@BrickScanner">
     
@@ -43,6 +41,7 @@
     <meta name="google-play-app" content="app-id=com.brickscanner.app">
     
     <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -74,8 +73,8 @@
         "ratingCount": "2547"
       },
       "downloadUrl": [
-        "https://apps.apple.com/app/brick-scanner/id123456789",
-        "https://play.google.com/store/apps/details?id=com.brickscanner.app"
+        "https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486",
+        "https://play.google.com/store/apps/details?id=com.bluedust.brickscanner"
       ]
     }
     </script>
@@ -101,10 +100,10 @@
                         <option value="es">🇪🇸 Español</option>
                     </select>
                 </div>
-                <button class="nav-btn download-btn">
+                <a href="https://onelink.to/56hzqk" class="nav-btn download-btn" target="_blank" rel="noopener">
                     <i class="fas fa-download"></i>
                     Download
-                </button>
+                </a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -126,14 +125,14 @@
                     Photograph your LEGO pieces and instantly discover all the sets you can build with our intelligent AI recognition.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://apps.apple.com/app/brick-scanner/id123456789" class="download-btn-hero apple" target="_blank" rel="noopener">
+                    <a href="https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486" class="download-btn-hero apple" target="_blank" rel="noopener">
                         <i class="fab fa-apple"></i>
                         <div>
                             <span class="small">Download on the</span>
                             <span class="big">App Store</span>
                         </div>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.brickscanner.app" class="download-btn-hero google" target="_blank" rel="noopener">
+                    <a href="https://play.google.com/store/apps/details?id=com.bluedust.brickscanner" class="download-btn-hero google" target="_blank" rel="noopener">
                         <i class="fab fa-google-play"></i>
                         <div>
                             <span class="small">Get it on</span>
@@ -160,14 +159,14 @@
                 <div class="phone-mockup">
                     <div class="phone-frame">
                         <div class="phone-screen">
-                            <img src="" alt="Brick Scanner App Interface" id="appScreenshot">
+                            <img src="img/brickScreen.webp" alt="Brick Scanner App Interface">
                         </div>
                     </div>
                     <div class="floating-elements">
-                        <div class="floating-brick brick-1">🟥</div>
-                        <div class="floating-brick brick-2">🟦</div>
-                        <div class="floating-brick brick-3">🟨</div>
-                        <div class="floating-brick brick-4">🟩</div>
+                        <div class="floating-brick brick-1">⬜</div>
+                        <div class="floating-brick brick-2">⬜</div>
+                        <div class="floating-brick brick-3">⬜</div>
+                        <div class="floating-brick brick-4">⬜</div>
                     </div>
                 </div>
             </div>
@@ -291,14 +290,14 @@
             <h2 class="cta-title">Ready to rediscover your LEGO?</h2>
             <p class="cta-subtitle">Download Brick Scanner now and start your adventure</p>
             <div class="cta-buttons">
-                <a href="https://apps.apple.com/app/brick-scanner/id123456789" class="download-btn-hero apple" target="_blank" rel="noopener">
+                <a href="https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486" class="download-btn-hero apple" target="_blank" rel="noopener">
                     <i class="fab fa-apple"></i>
                     <div>
                         <span class="small">Download on the</span>
                         <span class="big">App Store</span>
                     </div>
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.brickscanner.app" class="download-btn-hero google" target="_blank" rel="noopener">
+                <a href="https://play.google.com/store/apps/details?id=com.bluedust.brickscanner" class="download-btn-hero google" target="_blank" rel="noopener">
                     <i class="fab fa-google-play"></i>
                     <div>
                         <span class="small">Get it on</span>
