--- a/fr/index.html
+++ b/fr/index.html
@@ -39,10 +39,11 @@
     <link rel="alternate" hreflang="x-default" href="https://brick-scanner.com/">
     
     <!-- Mobile App Links -->
-    <meta name="apple-itunes-app" content="app-id=123456789">
-    <meta name="google-play-app" content="app-id=com.brickscanner.app">
+    <meta name="apple-itunes-app" content="app-id=6751249486">
+    <meta name="google-play-app" content="app-id=com.bluedust.brickscanner">
     
     <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
@@ -74,8 +75,8 @@
         "ratingCount": "2547"
       },
       "downloadUrl": [
-        "https://apps.apple.com/app/brick-scanner/id123456789",
-        "https://play.google.com/store/apps/details?id=com.brickscanner.app"
+        "https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486",
+        "https://play.google.com/store/apps/details?id=com.bluedust.brickscanner"
       ]
     }
     </script>
@@ -101,10 +102,10 @@
                         <option value="es">🇪🇸 Español</option>
                     </select>
                 </div>
-                <button class="nav-btn download-btn">
+                <a href="https://onelink.to/56hzqk" class="nav-btn download-btn" target="_blank" rel="noopener">
                     <i class="fas fa-download"></i>
                     Télécharger
-                </button>
+                </a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -126,14 +127,14 @@
                     Photographiez vos pièces LEGO et découvrez instantanément tous les sets que vous pouvez construire avec notre IA de reconnaissance intelligente.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://apps.apple.com/app/brick-scanner/id123456789" class="download-btn-hero apple" target="_blank" rel="noopener">
+                    <a href="https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486" class="download-btn-hero apple" target="_blank" rel="noopener">
                         <i class="fab fa-apple"></i>
                         <div>
                             <span class="small">Télécharger sur</span>
                             <span class="big">App Store</span>
                         </div>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.brickscanner.app" class="download-btn-hero google" target="_blank" rel="noopener">
+                    <a href="https://play.google.com/store/apps/details?id=com.bluedust.brickscanner" class="download-btn-hero google" target="_blank" rel="noopener">
                         <i class="fab fa-google-play"></i>
                         <div>
                             <span class="small">Disponible sur</span>
@@ -160,7 +161,7 @@
                 <div class="phone-mockup">
                     <div class="phone-frame">
                         <div class="phone-screen">
-                            <img src="" alt="Interface de l'application Brick Scanner" id="appScreenshot">
+                            <img src="../img/brickScreen.webp" alt="Brick Scanner App Interface">
                         </div>
                     </div>
                     <div class="floating-elements">
@@ -291,14 +292,14 @@
             <h2 class="cta-title">Prêt à redécouvrir vos LEGO ?</h2>
             <p class="cta-subtitle">Téléchargez Brick Scanner dès maintenant et commencez votre aventure</p>
             <div class="cta-buttons">
-                <a href="https://apps.apple.com/app/brick-scanner/id123456789" class="download-btn-hero apple" target="_blank" rel="noopener">
+                <a href="https://apps.apple.com/us/app/brick-scanner-detect-build/id6751249486" class="download-btn-hero apple" target="_blank" rel="noopener">
                     <i class="fab fa-apple"></i>
                     <div>
                         <span class="small">Télécharger sur</span>
                         <span class="big">App Store</span>
                     </div>
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.brickscanner.app" class="download-btn-hero google" target="_blank" rel="noopener">
+                <a href="https://play.google.com/store/apps/details?id=com.bluedust.brickscanner" class="download-btn-hero google" target="_blank" rel="noopener">
                     <i class="fab fa-google-play"></i>
                     <div>
                         <span class="small">Disponible sur</span>
